# winposture

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: claude.yml  test.yml
docs/: index.html
src/winposture/: __init__.py  __main__.py  cis_map.py  cli.py  compare.py  exceptions.py  models.py  profile.py  reporter.py  scanner.py  scoring.py  utils.py
src/winposture/checks/: __init__.py  accounts.py  antivirus.py  encryption.py  firewall.py  misc.py  network.py  os_info.py  powershell.py  rdp.py  services.py  smb.py  startup.py  uac.py  updates.py
templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_compare.py  test_profile.py  test_reporter.py  test_scanner.py  test_scenarios.py  test_scoring.py  test_utils.py
tests/test_checks/: test_accounts.py  test_antivirus.py  test_encryption.py  test_firewall.py  test_misc.py  test_network.py  test_os_info.py  test_powershell.py  test_rdp.py  test_services.py  test_smb.py  test_startup.py  test_uac.py  test_updates.py
